--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
-{
+ {
+  "name": "stock_watchlist",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
